--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ before_install:
   - go get -t -d -v .
 
 script:
-  - go test -v .
+  - go test -v . -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 matrix:
   allow_failures:
