--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.txt
 
 # Editor directories and files
 .idea
@@ -18,4 +19,4 @@
 go.sum
 
 # Temp or test directories and files
-coverage.txt
+testdata.json
