feat: support send raw HTTP requests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,8 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: ${{ matrix.go }}
-        id: go
 
-      - name: Checkout code into the Go module directory
+      - name: Checkout code
         uses: actions/checkout@v1
 
       - name: Get dependencies
@@ -23,29 +22,3 @@ jobs:
 
       - name: Test
         run: go test -v .
-
-  coverage:
-    name: Coverage
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Set up Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.13.x
-        id: go
-
-      - name: Checkout code into the Go module directory
-        uses: actions/checkout@v1
-
-      - name: Get dependencies
-        run: go mod tidy
-
-      - name: Test
-        run: go test -v . -race -coverprofile=coverage.txt -covermode=atomic
-
-      - name: Upload coverage to CodeCov
-        uses: codecov/codecov-action@v1.0.2
-        with:
-          token: ${{secrets.CODECOV_TOKEN}}
-          file: ./coverage.txt
